# Varianz-Ontario

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
apps/web/: package.json  pnpm-lock.yaml  tsconfig.json
apps/web/app/: assistant-chat.css  auth-gate.tsx  auth.css  brand.css  chart-filters.css  dashboard-context.css  dashboard.tsx  energy-efficiency.css  energy-interpretation.css  energy-state.css  layout.tsx  page.tsx  stakeholder-impact.css  styles.css
docs/: 01-product-requirements.md  02-standards-governance.md  03-data-architecture.md  04-solution-architecture.md  05-analytics-ml.md  06-llm-agent.md  07-ux-replay.md  08-verification-delivery.md  09-nfr-security.md  10-documentation-audit.md  11-connected-development.md  12-authentication-deployment.md  12-intraday-energy-and-efficiency.md  README.md
docs/adr/: 001-modular-monolith.md  002-supabase-system-of-record.md  003-typed-llm-tools.md  004-no-physical-control.md  005-versioned-model-artifacts.md  006-hybrid-intraday-energy-serving.md  README.md
scripts/: build_baseline_artifact.py  build_intraday_energy_artifact.py  db_admin.py
services/api/varianz/: __init__.py  (+14 more)
supabase/: config.toml
supabase/migrations/: 202607110001_initial.sql  202607120001_operational_intelligence.sql  202607130001_intraday_energy.sql  202607130001_model_artifact_registry.sql  202607130002_intraday_energy_cache.sql  202607200001_ontario_midpeak_tariff.sql  202607200002_upgrade_legacy_ontario_tou.sql
tests/: test_baseline_artifact.py  test_core.py  test_intraday_artifact.py
(+24 files in other folders)
